[project]
name = "retriever-techniques"
version = "0.1.0"
description = ""
authors = [
    {name = "aib"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "langchain-pymupdf4llm (>=0.4.1,<0.5.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
